[package]
name = "sine_cache"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SineCache is a high-performance, in-memory caching library for Rust, designed to efficiently store and manage key-value pairs with support for various eviction policies."
repository = "https://github.com/sineshashi/SineCache"
readme = "https://github.com/sineshashi/SineCache/blob/main/README.md"
authors = ["Shashi Kant shashikantrbl123@gmail.com"]
rust-version = "1.70"
homepage = "https://docs.rs/sine_cache/latest/sine_cache/"

[dependencies]
