[package]
name = "sine_cache"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "SineCache is a high-performance, in-memory caching library for Rust, designed to efficiently store and manage key-value pairs with support for various eviction policies."
repository = "https://github.com/sineshashi/SineCache"
readme = "README.md"
authors = ["Shashi Kant shashikantrbl123@gmail.com"]
rust-version = "1.70"
homepage = "https://docs.rs/sine_cache/latest/sine_cache/"

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.80"
rand = "0.8.5"
serde = {version =  "1.0.203", features = ["derive"]}
serde_json = "1.0.119"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
